--- a/AntPlusMauiClient/Views/BicyclePowerView.xaml
+++ b/AntPlusMauiClient/Views/BicyclePowerView.xaml
@@ -73,7 +73,7 @@
                                     <Button Text="Get Parameters" Command="{Binding GetCustomCalParametersCommand}"/>
                                     <Label Text="{Binding Sensor.CustomCalibrationParameters, StringFormat='Parameters: {0}'}" Grid.Column="1" VerticalOptions="Center"/>
                                     <Button Text="Set Parameters" Command="{Binding SetCustomCalParametersCommand}" CommandParameter="{Binding Text, Source={x:Reference CustomCalParms}}" Grid.Row="1"/>
-                                    <Entry Placeholder="Enter 6 hae bytes" x:Name="CustomCalParms" Grid.Column="1" Grid.Row="1"/>
+                                    <Entry Placeholder="Enter 6 hex bytes" x:Name="CustomCalParms" Grid.Column="1" Grid.Row="1"/>
                                 </Grid>
                             </StackLayout>
                         </Border>
