--- a/AntPlusMauiClient/App.xaml
+++ b/AntPlusMauiClient/App.xaml
@@ -25,6 +25,11 @@
                 <Setter Property="Stroke" Value="{AppThemeBinding Light={StaticResource BlackBrush}, Dark={StaticResource WhiteBrush}}"/>
                 <Setter Property="StrokeShape" Value="RoundRectangle 8"/>
             </Style>
+
+            <Style x:Key="HeaderLabelStyle" TargetType="Label">
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="TextDecorations" Value="Underline" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
