--- a/AntPlusMauiClient/Views/BicycleCrankTorqueView.xaml
+++ b/AntPlusMauiClient/Views/BicycleCrankTorqueView.xaml
@@ -7,7 +7,7 @@
              x:Class="AntPlusMauiClient.Views.BicycleCrankTorqueView">
     <Border>
         <StackLayout>
-            <Label Text="Crank Torque" FontAttributes="Bold" TextDecorations="Underline"/>
+            <Label Text="Crank Torque" Style="{StaticResource HeaderLabelStyle}"/>
             <Label Text="{Binding AverageAngularVelocity, StringFormat='Average Angular Velocity (rad/s): {0:F3}'}"/>
             <Label Text="{Binding AveragePower, StringFormat='Average Power (Watts): {0:F3}'}"/>
             <Label Text="{Binding AverageTorque, StringFormat='Average Torque (Nm): {0:F3}'}"/>
